# vista_sl_llm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  admin_tools.py  curriculum_knowledge_base.txt  database.py  docker-compose.yml  frontend_simulate_key.json  llm_service.py  platform_connector.py  playground.html  prompt.txt  pyproject.toml  requirements.txt  requirments.txt  server.py  simulate_front_http.py  simulate_frontend.py  sync_curriculum.py  test_diagnostic.py  test_llm_back.py
backend/: database.py  llm_service.py  logging_config.py  main.py  platform_connector.py  rag_engine.py  rate_limiter.py
backend/routes/: chat.py  health.py
curriculum/: curriculum.txt  sync_curriculum.py
curriculum/curriculum_extractor/: page_file.txt  parsing.py
llm_deliverable/: llm_deliverable.docx  llm_deliverable_backup.docx
postges_bin/: setup_postgres.sh  stop_postgres.sh
tests/: get_threads_history.py  list_all_threads.py  simulator.py  sync_database.py  test_coach_logic.py  test_connection.py  test_diagnostic.py  test_full_context.py  test_hashing.py  test_history_flow.py  test_llm_back.py  test_rate_limit.py  test_ttl.py  user_history_audit.py
