[project]
name = "vista-sl-llm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "chromadb>=0.5.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "litellm>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.25",
    "uvicorn>=0.27.0",
]
